--- a/projectA/studybud/templates/navbar.html
+++ b/projectA/studybud/templates/navbar.html
@@ -69,7 +69,7 @@
 <div class="navbar">
   <a href="#" class="logo">
     <img src="https://emojicdn.elk.sh/🏡" alt="logo" />
-    ROOM
+    LOGO
   </a>
   <a href="#">Home</a>
   <a href="#">About</a>
