--- a/projectA/studybud/templates/room.html
+++ b/projectA/studybud/templates/room.html
@@ -33,7 +33,10 @@
   {% block content %}
   <div class="container">
     <h1>ROOM</h1>
-    <p> {{rooms}}</p>
+   
+    {% for room in rooms %}
+        <p>{{room.id}}. {{room.name}}</p>
+    {% endfor %}
     
     <!-- Other content can be added here -->
   </div>{% endblock content %}
