--- a/projectA/studybud/base/templates/home.html
+++ b/projectA/studybud/base/templates/home.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Room Page</title>
+<title>Home Page</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -30,16 +30,21 @@
 </head>
 <body>
   {% extends 'main.html' %}
-  {% block content %}
-  <div class="container">
-    <h1>ROOM</h1>
-   
-    {% for room in rooms %}
-        <p>{{room.id}}. {{room.name}}</p>
-    {% endfor %}
-    
-    <!-- Other content can be added here -->
-  </div>{% endblock content %}
+  
+   {% block content%}
 
+  <div class="container">
+    <h1>HOME PAGE</h1>
+    <!-- Other content can be added here -->
+    <div>
+      <div>
+        {% for room in rooms %}
+        <p>{{room.id}}. {{room.name}}</p>
+         {% endfor %}
+    
+      </div>
+   </div>
+ </div>
+  {% endblock  %}
 </body>
 </html>
