setting admin pannel

--- a/projectA/studybud/templates/navbar.html
+++ b/projectA/studybud/templates/navbar.html
@@ -69,9 +69,12 @@
 <div class="navbar">
   <a href="#" class="logo">
     <img src="https://emojicdn.elk.sh/🏡" alt="logo" />
-    LOGO
+    😄
+    🌟
+    💥
+     LOGO
   </a>
-  <a href="#">Home</a>
+  <a href="{% url 'home' %}">Home</a>
   <a href="#">About</a>
   <a href="#">Services</a>
   <a href="#">Contact</a>
