--- a/projectA/studybud/base/templates/home.html
+++ b/projectA/studybud/base/templates/home.html
@@ -39,7 +39,7 @@
     <div>
       <div>
         {% for room in rooms %}
-        <p>{{room.id}}. {{room.name}}</p>
+        <p>{{room.id}}. <a href="{% url 'room' room.id %}">{{room.name}}</a></p>
          {% endfor %}
     
       </div>
