--- a/projectA/studybud/base/templates/room.html
+++ b/projectA/studybud/base/templates/room.html
@@ -32,7 +32,7 @@
   {% extends 'main.html' %}
   {% block content %}
   <div class="container">
-    <h1>ROOM</h1>
+    <h1>{{room.name}}</h1>
    
    
     <!-- Other content can be added here -->
