--- a/projectA/studybud/base/templates/room.html
+++ b/projectA/studybud/base/templates/room.html
@@ -33,6 +33,7 @@
   {% block content %}
   <div class="container">
     <h1>{{room.name}}</h1>
+    <p>{{room.description}}</p>
    
    
     <!-- Other content can be added here -->
