--- a/projectA/studybud/templates/navbar.html
+++ b/projectA/studybud/templates/navbar.html
@@ -5,84 +5,68 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Navbar Page</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f2f2f2;
-  }
 
-  .navbar {
-    background-color: #333;
-    overflow: hidden;
-    padding: 10px 0;
-  }
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  padding: 10px 0;
+}
 
-  .navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
+.navbar .logo {
+  float: left;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+}
 
-  .navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+.navbar .logo img {
+  width: 40px;
+  height: 40px;
+  vertical-align: middle;
+  margin-right: 10px;
+}
 
-  .navbar .logo {
-    font-size: 24px;
-    margin-right: 10px;
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
+.search-container {
+  float: right;
+}
 
-  .navbar .logo img {
-    width: 40px;
-    height: 40px;
-    vertical-align: middle;
-    margin-right: 10px;
-  }
+.search-container input[type=text] {
+  padding: 6px;
+  font-size: 17px;
+  border: none;
+}
 
-  .container {
-    text-align: center;
-    margin-top: 50px;
-  }
+.search-container button {
+  padding: 6px 10px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
 
-  h1 {
-    font-size: 48px;
-    color: #333;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    border-bottom: 2px solid #333;
-    padding-bottom: 20px;
-    margin-bottom: 30px;
-  }
+.search-container button:hover {
+  background: #ccc;
+}
+
 </style>
 </head>
 <body>
-
-<div class="navbar">
-  <a href="#" class="logo">
-    <img src="https://emojicdn.elk.sh/🏡" alt="logo" />
-    😄
-    🌟
-    💥
-     LOGO
-  </a>
-  <a href="{% url 'home' %}">Home</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Contact</a>
-</div>
-
-<div class="container">
-  <!-- Other content can be added here -->
-</div>
-
+  <div class="navbar">
+    <a href="{% url 'home' %}" class="logo">
+      <img src="https://emojicdn.elk.sh/🏡" alt="logo" />
+      😄
+      🌟
+      💥
+       LOGO
+    </a>
+    <div class="search-container">
+      <form action="{% url 'home' %}" method="GET">
+        <input type="text" placeholder="Search room..." name="q">
+        
+      </form>
+    </div>
+  </div>
+  
 </body>
 </html>
