--- a/projectA/studybud/templates/navbar.html
+++ b/projectA/studybud/templates/navbar.html
@@ -56,8 +56,7 @@
     <a href="{% url 'home' %}" class="logo">
       <img src="https://emojicdn.elk.sh/🏡" alt="logo" />
       😄
-      🌟
-      💥
+    
        LOGO
     </a>
     <div class="search-container">
@@ -65,6 +64,7 @@
         <input type="text" placeholder="Search room..." name="q">
         
       </form>
+      <a href="{% url 'login' %}">Login</a>
     </div>
   </div>
   
