--- a/studybud/base/templates/base/room.html
+++ b/studybud/base/templates/base/room.html
@@ -1,5 +1,6 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<h3>{{room.id}} -- {{room.name}} </h3>
+<h3> {{room.name}} </h3>
+<p>{{room.description}}</p>
 {% endblock %}
