--- a/studybud/base/templates/base/delete.html
+++ b/studybud/base/templates/base/delete.html
@@ -4,7 +4,7 @@
 
 <form action="" method="POST">
     {% csrf_token %}
-    <p>Are you sure you want to delete {{obj}} ?</p>
+    <p>Are you sure you want to delete <b>{{obj}}</b> ?</p>
     <a href="/">Go Back</a>
     <input type="submit" value="Confirm">
 </form>
