--- a/studybud/base/templates/base/home.html
+++ b/studybud/base/templates/base/home.html
@@ -1,24 +1,56 @@
 {% extends 'main.html' %}
 
 {% block content %} 
-<h1>Home</h1>
 
-<div>
+<style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+
+</style>
+
+<div class="home-container">
+
+
     <div>
-        <a href="{% url 'create-room' %}">Create-Room</a> <hr>
-    </div>
-    {% for room in rooms %}
-    <div>
-        <a href="{% url 'update-room' room.id %}">Edit</a>
-        <a href="{% url 'delete-room' room.id %}">Delete</a>
-        <span>@{{room.host.username}}</span>
-        
-        <h5> {{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-        <small>#{{room.topic.name}}</small>
+        <h3>Brows Topics</h3>
         <hr>
+        <div>
+            <a href="{% url 'home' %}">All</a>
+          </div>
+
+              
+        {% for topic in topics %}
+          <div>
+            <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+          </div>
+        {% endfor %}
 
     </div>
-        {% endfor %}
+
+    <div>
+        <h4>{{room_count}} rooms available</h4>
+        <a href="{% url 'create-room' %}">Create-Room</a> <hr>
+        <div>
+           
+           {% for room in rooms %}
+           <div>
+               <a href="{% url 'update-room' room.id %}">Edit</a>
+               <a href="{% url 'delete-room' room.id %}">Delete</a>
+               <span>@{{room.host.username}}</span>
+               
+               <h5> {{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+               <small>#{{room.topic.name}}</small>
+               <hr>
+       
+           </div>
+               {% endfor %}
+        </div>
+
+    </div>
+   
+
 
 </div>
 
