login functionality created

--- a/studybud/templates/main.html
+++ b/studybud/templates/main.html
@@ -6,8 +6,20 @@
     <title>StudyBud</title>
 </head>
 <body>
-
+    {% csrf_token %}
     {% include 'navbar.html' %}
+
+    <div>
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+           <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    
+    </div>
+    
 
 
     {% block content %}
