--- a/studybud/templates/navbar.html
+++ b/studybud/templates/navbar.html
@@ -7,5 +7,10 @@
     <input type="text" name="q" placeholder="Search Rooms..">
 </form>
 
-<a href="{% url 'login' %}">Login</a>
+{% if request.user.is_authenticated %}
+<a href="{% url 'logout' %}"><button>Logout</button></a>
+
+{% else %}
+ <a href="{% url 'login' %}"><button>Login</button></a>
+{% endif %}
 <hr>
