--- a/studybud/base/templates/base/room.html
+++ b/studybud/base/templates/base/room.html
@@ -1,6 +1,58 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<h3> {{room.name}} </h3>
-<p>{{room.description}}</p>
+
+<style>
+    .room-container{
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        gap: 4;
+    }
+</style>
+<div class="room-container">
+
+    <div>
+        <h3> {{room.name}} </h3>
+        <p>{{room.description}}</p>
+        
+        <div class="comment-wrapper">
+            <h3>Conversation</h3>
+            <hr/>
+            {% for message in messages1 %}
+              <div>
+                {% if request.user == message.user %}
+                <a href="{% url 'delete-message' message.id %}">Delete</a>
+
+                {% endif %}
+                <h5> @{{message.user}} - {{message.created|timesince}} ago.</h5>
+                <p>{{message}}  </p>
+              </div>
+            {% endfor %}
+        
+        </div>
+        {% if request.user.is_authenticated %}
+        <div class="comment-form">
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="text" name="body"  placeholder="Write Your Messages here" />
+            </form>
+        </div>
+        {% endif %}
+
+    </div>
+
+    <div>
+        <h3>participants</h3>
+        <hr>
+        {% for user in participants %}
+        <div>
+            <p>@{{user.username}}</p>
+        </div>
+        {% endfor %}
+
+    </div>
+   
+
+</div>
+
 {% endblock %}
