--- a/studybud/templates/navbar.html
+++ b/studybud/templates/navbar.html
@@ -8,6 +8,7 @@
 </form>
 
 {% if request.user.is_authenticated %}
+<p>Hello {{request.user}}</p>
 <a href="{% url 'logout' %}"><button>Logout</button></a>
 
 {% else %}
