--- a/studybud/base/templates/base/home.html
+++ b/studybud/base/templates/base/home.html
@@ -5,7 +5,7 @@
 <style>
     .home-container{
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
 
 </style>
@@ -14,44 +14,15 @@
 
 
     <div>
-        <h3>Brows Topics</h3>
-        <hr>
-        <div>
-            <a href="{% url 'home' %}">All</a>
-          </div>
-
-              
-        {% for topic in topics %}
-          <div>
-            <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
-          </div>
-        {% endfor %}
-
+       {% include 'base/home-components/topics_component.html' %}
     </div>
 
     <div>
-        <h4>{{room_count}} rooms available</h4>
-        <a href="{% url 'create-room' %}">Create-Room</a> <hr>
-        <div>
-           
-           {% for room in rooms %}
-           <div>
-            {% if request.user == room.host %}
+        {% include 'base/home-components/feed_component.html' %}
+    </div>
 
-               <a href="{% url 'update-room' room.id %}">Edit</a>
-               <a href="{% url 'delete-room' room.id %}">Delete</a>
-
-            {% endif %}
-               <span>@{{room.host.username}}</span>
-               
-               <h5> {{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-               <small>#{{room.topic.name}}</small>
-               <hr>
-       
-           </div>
-               {% endfor %}
-        </div>
-
+    <div>
+       {% include 'base/home-components/activity_component.html' %}
     </div>
    
 
