--- a/studybud/templates/navbar.html
+++ b/studybud/templates/navbar.html
@@ -1,7 +1,9 @@
+{% load static %}
+
 <header class="header header--loggedIn">
     <div class="container">
       <a href="{% url 'home' %}" class="header__logo">
-        <img src="assets/logo.svg" />
+        <img src="{% static 'images/logo.svg' %}" />
         <h1>StudyBuddy</h1>
       </a>
       <form class="header__search" method="GET" action="{% url 'home' %}">
@@ -38,7 +40,7 @@
         {% else %}
           <!-- Not Logged In -->
         <a href="{% url 'login' %}">
-          <img src="./assets/avatar.svg" />
+          <img src="{% static 'images/avatar.svg' %}" />
           <p>Login</p>
         </a>
         {% endif %}
@@ -53,7 +55,7 @@
             </svg>
             Settings</a
           >
-          <a href="login.html" class="dropdown-link"
+          <a href="{% url 'logout' %}" class="dropdown-link"
             ><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>sign-out</title>
               <path
