--- a/studybud/base/templates/base/home-components/activity_component.html
+++ b/studybud/base/templates/base/home-components/activity_component.html
@@ -17,8 +17,9 @@
           <span>{{message.created|timesince}}ago</span>
         </p>
       </a>
+
+      {% if message.user == request.user %}
       <div class="roomListRoom__actions">
-        {% if message.user == request.user %}
         <a href="{% url 'delete-activity' message.id %}">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
             <title>remove</title>
@@ -27,11 +28,14 @@
             ></path>
           </svg>
         </a>
-        {% endif %}
+       
       </div>
+      {% endif %}
+
+
     </div>
     <div class="activities__boxContent">
-      <p>replied to post “<a href="{% url 'room' room.id %}">{{message.room}}</a>”</p>
+      <p>replied to post “<a href="{% url 'room' message.room.id %}">{{message.room}}</a>”</p>
       <div class="activities__boxRoomContent">
         {{message.body}}
       </div>
@@ -55,20 +59,3 @@
 
 
 
-<h3>Recent Activity</h3>
-<hr>
-{% for message in room_messages %}
-<div>
-    
-   <small><a href="">@{{message.user}}</a> {{message.created|timesince}}</small>
-
-  <small>replied to <b>{{message.room}}</b> </small>
-  <p>{{message.body}}</p>
-  
-  {% if message.user == request.user %}
-    <a href="{% url 'delete-activity' message.id %}">Delete</a>
-    {% endif %}
-  <hr>
-
-</div>
-{% endfor %}
