--- a/studybud/base/templates/base/login_reg.html
+++ b/studybud/base/templates/base/login_reg.html
@@ -1,4 +1,5 @@
-{% extends 'main.html' %} {% block content %} 
+{% extends 'main.html' %}
+ {% block content %} 
 {% if page == 'login' %}
 <div>
   <form method="post" action="">
@@ -23,4 +24,5 @@
   <p>Already signed up</p>
   <a href="{% url 'login' %}">Login</a>
 </div>
-{% endif %} {% endblock %}
+{% endif %}
+{% endblock %}
