--- a/studybud/base/templates/base/update-user.html
+++ b/studybud/base/templates/base/update-user.html
@@ -1,6 +1,7 @@
+
 {% extends 'main.html' %}
 {% block content %}
-    <main class="delete-item layout">
+    <main class="update-account layout">
         <div class="container">
             <div class="layout__box">
                 <div class="layout__boxHeader">
@@ -14,24 +15,29 @@
                                 </path>
                             </svg>
                         </a>
-                        <h3>Back</h3>
+                        <h3>Edit your profile</h3>
                     </div>
                 </div>
                 <div class="layout__body">
-                    <form class="form" action="" method="POST">
-                        {% csrf_token %}
+                    <form class="form" method="POST" action="">
+                      {% csrf_token %}
+
+                      {% for field in form %}
                         <div class="form__group">
-                            <p>Are you sure you want to delete "{{obj}}"?</p>
+                            <label for="profile_pic">{{field.label}}</label>
+                        {{field}}
                         </div>
+                        {% endfor %}
 
-                        <div class="for__group">
-                            <input class="btn btn--main" type="submit" value="Confirm" />
+
+                        <div class="form__action">
+                            <a class="btn btn--dark" href="index.html">Cancel</a>
+                            <button class="btn btn--main" type="submit">Update</button>
                         </div>
-
                     </form>
                 </div>
             </div>
         </div>
+      </div>
     </main>
-    <script src="script.js"></script>
 {% endblock %}
