--- a/myproject/posts/templates/posts/posts_list.html
+++ b/myproject/posts/templates/posts/posts_list.html
@@ -6,5 +6,18 @@ Posts
 {% endblock  %}
 
 {% block content %}
+<div>
 <h1>Posts </h1>
+{% for post in posts %}
+
+
+   <div>
+    <hr>
+    {{ post.date }}
+   <li> {{ post.title }} </li>
+   <li> {{ post.body }} </li>
+   <li> {{ post.slug }} </li>
+   </div>
+   {% endfor %}
+</div>
 {% endblock  %}
