--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -16,9 +16,9 @@
 <body>
     
     <nav>
-    <a href="/">  🏠</a>
-    <a href="/about">  😊</a>
-    <a href="/posts">  📰</a>
+    <a href="/">  <span role='image' aria-label="Home">🏠</span></a>
+    <a href="/about">  <span role='image' aria-label="About">😊</span> </a>
+    <a href="{% url 'posts:list' %}"> <span role='image' aria-label="News"> 📰</span></a>
     </nav>
 
     <main>
