--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -11,7 +11,7 @@
 
     </title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/main.js' %}" ></script>
+    <script src="{% static 'js/main.js' %}" defer></script>
 </head>
 <body>
     
