registration page is updated

--- a/myproject/users/templates/users/login.html
+++ b/myproject/users/templates/users/login.html
@@ -1,12 +1,12 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-Register a new user
+user Login 
 {% endblock title %}
 
 {% block content %}
-<h1>Register a new user</h1>
-<form action="/users/register/" class="form-width-validation" method="POST">
+<h1>Login a new user</h1>
+<form action="/users/login/" class="form-width-validation" method="POST">
     {% csrf_token %}
     {{form}}
     <button class="form-submit">Submit</button>
