--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -16,9 +16,20 @@
 <body>
     
     <nav>
-    <a href="/">  <span role='image' aria-label="Home">🏠</span></a>
-    <a href="/about">  <span role='image' aria-label="About">😊</span> </a>
-    <a href="{% url 'posts:list' %}"> <span role='image' aria-label="News"> 📰</span></a>
+
+    <a href="/">  <span role='image' aria-label="Home" title="Home">🏠</span></a>
+
+    <a href="/about">  <span role='image' aria-label="About" title="About">😊</span> </a>
+
+    <a href="{% url 'posts:list' %}"> <span role='image' aria-label="News" title="News"> 📰</span></a>
+
+    <a href="{% url 'users:register' %}"> <span role='image' aria-label="User register" title="register"> 🚀</span></a>
+
+    <a href="{% url 'users:login' %}"> <span role='image' aria-label="User login" title="login"> 🔒</span></a>
+{% if request.user.is_authenticated %}
+Logged in
+{% endif %}
+
     </nav>
 
     <main>
