--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -17,17 +17,21 @@
     
     <nav>
 
-    <a href="/">  <span role='image' aria-label="Home" title="Home">🏠</span></a>
+    <a href="/">  <span role='image' aria-label="Home" title="Home">🏠</span></a> |
 
-    <a href="/about">  <span role='image' aria-label="About" title="About">😊</span> </a>
+    <a href="/about">  <span role='image' aria-label="About" title="About">😊</span> </a> |
 
-    <a href="{% url 'posts:list' %}"> <span role='image' aria-label="News" title="News"> 📰</span></a>
+    <a href="{% url 'posts:list' %}"> <span role='image' aria-label="News" title="News"> 📰</span></a> |
 
-    <a href="{% url 'users:register' %}"> <span role='image' aria-label="User register" title="register"> 🚀</span></a>
+    <a href="{% url 'users:register' %}"> <span role='image' aria-label="User register" title="register"> 🚀</span></a> |
 
-    <a href="{% url 'users:login' %}"> <span role='image' aria-label="User login" title="login"> 🔒</span></a>
+    <a href="{% url 'users:login' %}"> <span role='image' aria-label="User login" title="login"> 🔒</span></a> 
+    <form class="logout" action="{% url 'users:logout' %}" method="post">
+            {% csrf_token %}
+            <button class="logout-button" aria-label="User Logout" title="logout">👋</button>
+    </form>
 {% if request.user.is_authenticated %}
-Logged in
+ <p>{{request.user.username}}</p> Logged in
 {% endif %}
 
     </nav>
