--- a/myproject/users/templates/users/login.html
+++ b/myproject/users/templates/users/login.html
@@ -5,7 +5,7 @@ user Login
 {% endblock title %}
 
 {% block content %}
-<h1>Login a new user</h1>
+<h1>Login user</h1>
 <form action="/users/login/" class="form-width-validation" method="POST">
     {% csrf_token %}
     {{form}}
