--- a/myproject/posts/templates/posts/posts_list.html
+++ b/myproject/posts/templates/posts/posts_list.html
@@ -8,6 +8,10 @@ Posts
 {% block content %}
 <div>
 <h1>Posts </h1>
+
+   {% if user.is_authenticated %}
+   <a href="{% url 'posts:new-post' %}">New Post</a>
+   {% endif %}
 {% for post in posts %}
 
 
