--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -23,9 +23,12 @@
 
     <a href="{% url 'posts:list' %}"> <span role='image' aria-label="News" title="News"> 📰</span></a> |
 
-    <a href="{% url 'users:register' %}"> <span role='image' aria-label="User register" title="register"> 🚀</span></a> |
+    {% if user.is_authenticated %}
+   <a href="{% url 'posts:new-post' %}"> <span role='image' aria-label="User register" title="register"> 🆕</span></a> |
 
-    <a href="{% url 'users:login' %}"> <span role='image' aria-label="User login" title="login"> 🔒</span></a> 
+   {% endif %}
+    <a href="{% url 'users:register' %}"> <span role='image' aria-label="User register" title="register"> 🚀</span></a> |
+    <a href="{% url 'users:login' %}"> <span role='image' aria-label="User login" title="login"> 🔒</span></a> |
     <form class="logout" action="{% url 'users:logout' %}" method="post">
             {% csrf_token %}
             <button class="logout-button" aria-label="User Logout" title="logout">👋</button>
