--- a/myproject/users/templates/users/login.html
+++ b/myproject/users/templates/users/login.html
@@ -9,6 +9,9 @@ user Login
 <form action="/users/login/" class="form-width-validation" method="POST">
     {% csrf_token %}
     {{form}}
+    {% if request.GET.next %}
+    <input type="hidden" name="next" value="{{request.GET.next}}" />
+    {% endif %}
     <button class="form-submit">Submit</button>
 </form>
 {% endblock content %}
